--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -292,13 +292,15 @@
 	.template-blog .mini-list-item .mini-view_image { width:80px; }
 	.template-blog .mini-list-item .details { margin-left:0; }
 	
-	.cart thead, .cart-price, .cart .cart__update-wrapper { display:none; padding-top:0; padding-bottom:15px; }
+	.cart thead, .cart-price, .cart .cart__update-wrapper { padding-top:0; padding-bottom:15px; width: 100%; }
 	.cart .small--hide { display:none; }
-	.cart tr, .cart tbody { width:100%; display:table; } 
-	.cart tbody { display:block; }
+	.cart tr, .cart tbody { width:100%;} 
+	/* .cart tbody { display:block; } */
 	.cart-flex { display:block; width:100%; }
 	.cart-flex-item { display:table-cell; min-width:0; }
 	.cart__price-wrapper { text-align:right; }
+
+	.histobel {overflow: auto;}
 	
 	#content_quickview.modal { overflow:auto; }
 	
